--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "cylon": "https://github.com/ksteve/cylon/tarball/master",
     "cylon-api-http": "^0.4.1",
-    "cylon-nest": "^0.10.0"
+    "cylon-nest": "^0.10.0",
+    "cylon-wemo": "^1.2.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "mocha": "^3.2.0"
   }
 }
