--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "license": "ISC",
   "dependencies": {
     "cylon": "https://github.com/ksteve/cylon/tarball/master",
-    "cylon-api-http": "^0.4.1",
+    "cylon-api-http": "file:cylon-api-http",
     "cylon-nest": "^0.10.0",
-    "cylon-wemo": "^1.2.0"
+    "cylon-tplink": "file:cylon-tplink",
+    "cylon-wemo": "file:cylon-wemo"
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
     "chai-http": "^3.0.0",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "sinon": "^2.0.0",
+    "sinon-chai": "^2.8.0"
   }
 }
