tp link connection fix

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "joulie server component for interacting with devices",
   "main": "app/server.js",
   "scripts": {
+    "start": "node app/server",
     "test": "./node_modules/.bin/mocha --reporter spec"
   },
   "author": "",
